# FT601-FPGA-interface-board

./: .gitignore  README.md
driver/SoapyFTDI/: CMakeLists.txt  CTestTestfile.cmake  FtdiSDR_Registration.cpp  FtdiSDR_Settings.cpp  FtdiSDR_Streaming.cpp  SoapyFtdiSDR.hpp  ring  ring.c
driver/c/: data_reader  data_reader.c
driver/python/my_attempt/: ftd3xx.py  ftdi_write.py
driver/soapy_c_example/: example  example.c
fpga/cocotb/: ftdi_sim.py  ftdi_transmitter_sim.py  modelsim.ini  transcript
fpga/lattice/: .floorplanner.ini  .setting.ini  Untitled.tpf  fifo.edn  fifo.ipx  fifo.lpc  fifo.naf  fifo.sym  fifo.v  fifo_tmpl.v  ft601.ldf  ft601.lpf  ft601.sdc  ft6011.sty  io assist mod.sty  reveal.rva  reveal.rvl  reveal.rvs  reveal.svf  reveal.trc  tb_fifo_tmpl.v
fpga/rtl/: afifo.v  debounce.v  edge_det.v  ft245.v  sync.v  top.v  walking_bit_gen.v
gnuradio/: test ftdi.grc  untitled.py
pcb/: fp-lib-table  ftdi601_breakout.kicad_pcb  ftdi601_breakout.kicad_pro  ftdi601_breakout.kicad_sch  sym-lib-table
pcb/gerbers/: ftdi601_breakout-B_Cu.gbr  ftdi601_breakout-B_Mask.gbr  ftdi601_breakout-B_Silkscreen.gbr  ftdi601_breakout-Edge_Cuts.gbr  ftdi601_breakout-F_Cu.gbr  ftdi601_breakout-F_Mask.gbr  ftdi601_breakout-F_Paste.gbr  ftdi601_breakout-F_Silkscreen.gbr  ftdi601_breakout-NPTH.drl  ftdi601_breakout-PTH.drl  ftdi601_breakout-job.gbrjob
